[gd_scene load_steps=6 format=2]

[ext_resource path="res://menus/InterfacePlaceholder.gd" type="Script" id=1]
[ext_resource path="res://ui/Menu/icons8-pause-squared-36.png" type="Texture" id=2]
[ext_resource path="res://ui/Menu/icons8-pause-button-36.png" type="Texture" id=3]
[ext_resource path="res://ui/Menu/icons8-pause-squared-filled-36.png" type="Texture" id=4]
[ext_resource path="res://menus/PauseMenu.tscn" type="PackedScene" id=5]

[node name="Interface" type="CanvasLayer" index="0"]

pause_mode = 2
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="MarginContainer" type="MarginContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
_sections_unfolded = [ "custom_constants" ]

[node name="PauseButton" type="TextureButton" parent="MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = 46.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 3 )
_sections_unfolded = [ "Rect", "Size Flags", "Textures" ]

[node name="PauseMenu" parent="." index="1" instance=ExtResource( 5 )]

[connection signal="pressed" from="MarginContainer/PauseButton" to="." method="_on_PauseButton_pressed"]

[connection signal="pressed" from="PauseMenu/PanelContainer/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]

[connection signal="pressed" from="PauseMenu/PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]


[editable path="PauseMenu"]
